package messenger.bereza.domain;

public enum AttachmentCategory {
    GENERIC,
    IMAGE,
    PDF,
    INSURANCE,
    VOUCHER,
    TICKET
}
