package messenger.bereza.domain;

public enum ChatType {
    PERSONAL,
    GROUP
}
