package messenger.bereza.domain;

public enum GeoPointType {
    USER_LOCATION,
    MEETING_POINT,
    ATTRACTION,
    EMERGENCY
}
