package messenger.bereza.domain;

public enum MemberRole {
    OWNER,
    ADMIN,
    MEMBER
}
