package messenger.bereza.domain;

public enum MessageType {
    TEXT,
    FILE,
    GEO,
    SYSTEM,
    BOOKING
}
